--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,9 @@
 asgiref==3.6.0
+dj-database-url==2.0.0
+dj-static==0.0.6
 Django==4.2
 Pillow==9.5.0
+python-decouple==3.8
 sqlparse==0.4.4
+static3==0.7.0
+typing_extensions==4.6.3
